Decrease font size on smaller screens to prevent text overflow

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -95,6 +95,7 @@ div.row.links {
         @media (max-width: 575.98px) {  /* used on bootstrap size 'xs' */
             border-radius: 10px;
             width: 100%;
+            font-size: 1.2em;
         }
 
         &:hover {
